--- a/css/product-card.css
+++ b/css/product-card.css
@@ -69,10 +69,6 @@ body{
 .product-container{
     margin:400px 22px;
 }
-.product-content{
-    margin:-330px 10px;
-    justify-content: space-between;
-}
 .card{
     margin:5px -2px;
    
@@ -193,33 +189,28 @@ body{
     /*zoom effect*/
 
 .zoom-img{
-    height: 300px;
-    width: 300px;
+    height:600px;
+    width:600px;
     overflow: hidden;
     position: relative;
+    margin:-250px 10px;
+  
+    
+}
+.text{
+    margin:-200px 200px;
 }
 
-.insta-image {
+.zoom-image {
     transition: 3.3s;
+    
 }
 
-.insta-image:hover {
+.zoom-image:hover {
     transform: scale(1.3);
     opacity: .3;
 }
-.middle-insta{
-    transition: .5s ease;
-    opacity: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    text-align: center;
-}
-.insta-img-div:hover .middle-insta {
-    opacity: 1;
-  }
+
     /*media query apply*/
     @media screen and (max-width: 500px) {
         body{
