--- a/css/header.css
+++ b/css/header.css
@@ -10,14 +10,14 @@ header{
     background-size:cover;
     /* width: 100%;                     Set the type of gradient (linear or radial) */
 }
-.logo{
+.navigationbar-logo{
   height: 130px;
 
 }
-.hamburger{
+.hamburger-img-nav{
   display: none;
 }
-.flex{
+.flex-display{
     display: flex;
 }
 .right-flex{
@@ -52,7 +52,7 @@ header{
     margin: 10px;
     cursor: pointer;
 } 
-.nav-container{
+.nav-container-main1{
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -248,13 +248,13 @@ header{
   }
  
   @media screen and (max-width:1200px) {
-    .logo{
+    .navigationbar-logo{
       position: absolute;
       top: -100%;
-      left: 1000%;
+      left: 70%;
     }
-    .hamburger{
-      display:  inline-block;
+    .hamburger-img-nav{
+      display: visible;
     }
     .mid-flex{
       display: none;
