--- a/css/about-us.css
+++ b/css/about-us.css
@@ -71,3 +71,30 @@
 .color{
     color: #e83e8c;
 }
+
+.icecream{
+    height: 400px;
+    width: auto;
+  margin-left: 40%;
+  padding: 20px; 
+}
+.icecream:hover{
+    border: 1px solid #e83e8c;
+}
+
+.register-btn{
+    width: 100%;
+    width: 100%;
+    padding: 10px;
+    border: none;
+    border-radius: 4px;
+    background-color: #e83e8c;
+    color: #fff;
+    cursor: pointer;
+
+}
+.register-btn:hover{
+    background-color: white;
+    color: #e83e8c;
+    border: 1px solid #e83e8c;
+}
