--- a/css/product-card.css
+++ b/css/product-card.css
@@ -81,15 +81,15 @@ body{
     border-radius:5px;
 }
 .container{
-    margin:10px 10px;
+    margin:8px 8px;
     justify-content:center;
     text-align:center;
     background-color:white;
     border:1px solid black;
     border-radius:20px;
     width:300px;
-    height:400px;
-    justify-content:space-between;
+    height:450px;
+    justify-content:space-around;
     
 }
 .container:hover{
@@ -115,7 +115,7 @@ body{
 }
 .btn{
     border: 1px solid black;
-    margin: 25px 1px;
+   
     padding: 10px 20px;
     background-color:#e83e8c;
     color: white;
@@ -182,8 +182,8 @@ body{
 
     }
     .addtocart{
-      width:350px;
-        text-align:center;
+      width:300px;
+      
       
     }
     /*zoom effect*/
