--- a/css/about-us.css
+++ b/css/about-us.css
@@ -2,9 +2,9 @@
     position: relative;
 }
 
-.banner-img{
-    width: 100%;
-    height: 400px;
+.slide-img{
+ height: 200px;
+ width: 300px;
 }
 
 .banner-heading{
