--- a/css/about-us.css
+++ b/css/about-us.css
@@ -5,6 +5,13 @@
 .slide-img{
  height: 200px;
  width: 300px;
+ cursor: pointer;
+}
+.slide-img:hover{
+    transform: scale(0.9);
+    z-index: 2;
+    transition: 0.3s;
+    box-shadow: 0 0 15px 9px #c2c2a3;
 }
 
 .banner-heading{
@@ -41,6 +48,7 @@
     height: 550px;
     width: 550px;
     box-shadow: 13px 15px 9px 3px  #c2c2a3;
+    cursor: pointer;
 }
 
 .paragraph-img:hover{
@@ -62,6 +70,7 @@
 .card{
     box-shadow: 10px 10px 20px 2px #e1e1d0;
    padding: 4px;
+   cursor: pointer;
 
 }
 .card:hover{
