--- a/css/add-to-cart.css
+++ b/css/add-to-cart.css
@@ -47,6 +47,7 @@ body {
     flex-direction: column;
 }
 .btn{
+    width: 90%;
     border: 1px solid black;
     margin: 10px 10px;
     padding: 7px 10px;
