--- a/css/add-to-cart.css
+++ b/css/add-to-cart.css
@@ -5,6 +5,7 @@ body {
     padding: 0;
     font-family: "Space Grotesk", sans-serif;
     font-optical-sizing: auto;
+    background-image: url('./../imgs/add-to-cart-imgs/body-bg-img.jpeg');
 }
 .container{
     box-shadow: 0px 0px 5px 0px rgb(90, 89, 89);
