--- a/css/add-to-cart.css
+++ b/css/add-to-cart.css
@@ -11,6 +11,7 @@ body {
     box-shadow: 0px 0px 5px 0px rgb(90, 89, 89);
     border: none;
     margin-bottom: 20px;
+    margin-top: 10px;
 
 }
 .h1{
@@ -25,7 +26,7 @@ body {
     box-shadow: 2px 2px 5px 0px rgb(48, 45, 45);
 }
 .product-div{
-
+ background-color: #e83e8c;
 }
 .price-div{
     display: flex;
