--- a/css/header.css
+++ b/css/header.css
@@ -14,7 +14,7 @@ header{
   height: 60px;
 
 }
-.hamburger-img-nav{
+.hamburger{
   display: none;
 }
 .flex-display{
@@ -251,10 +251,10 @@ header{
     .navigationbar-logo{
       position: absolute;
       top: -100%;
-      left: 70%;
+      left: 100%;
     }
     .hamburger-img-nav{
-      display: visible;
+      display: block;
     }
     .mid-flex{
       display: none;
